full names feature
success

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>:D</title>
+    <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
     <script src="js/jquery-3.7.1.min.js"></script>
@@ -15,8 +16,9 @@
         <div class="container">
             <h2>Waslandian names</h2>
             <p>you can get a random waslandian name for whatever reason you might need one</p>
-            <p id="name"></p>
-            <button onclick="randomname()">give me a random name</button>
+            <p id="name">...</p>
+            <button class="btn btn-secondary" onclick="randomMaleName()">give me a random male name</button>
+            <button class="btn btn-secondary" onclick="randomFealeName()">give me a random female name</button>
         </div>
     </div>
     
