--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/randomname.js"></script>
+    <script src="js/taxes.js"></script>
 </head>
 <body>
-    <header class="container text-center">
-        <h1>dont cry little wasland fan</h1>
-        <p>we've got enough guns to last for a lifetime.<br>Aluet! bring in more gun meshes, the boy's hungry!</p>
+    <header class="container-fluid text-center border-bottom">
+        <h1>WASLAND</h1>
     </header>
     <div class="container-fluid">
-        <div class="container">
+        <div class="container pt-3 pb-3 border-bottom">
             <h2>Waslandian names</h2>
-            <p>you can get a random waslandian name for whatever reason you might need one</p>
-            <p id="name">...</p>
-            <button class="btn btn-secondary" onclick="randomMaleName()">give me a random male name</button>
-            <button class="btn btn-secondary" onclick="randomFealeName()">give me a random female name</button>
+            <p>You can get a random waslandian name for whatever reason you might need one.</p>
+            <div>
+                <p id="name">...</p>
+                <button class="btn btn-secondary" onclick="randomMaleName()">give me a random male name</button>
+                <button class="btn btn-secondary" onclick="randomFealeName()">give me a random female name</button>
+            </div>
+        </div>
+        <div class="container pt-3 pb-3 border-bottom">
+            <h2>Taxation calculator</h2>
+            <div>
+                <h3>Income tax</h3>
+                <span>How much money I have:</span>
+                <input type="text" id="incometaxinput">
+                <p>My income tax will be: <b><span id="incometax">0%</span></b></p>
+            </div>
         </div>
     </div>
     
