--- a/gmod/darkrp.html
+++ b/gmod/darkrp.html
@@ -13,18 +13,26 @@
     </header>
     <div class="container-fluid">
         <div class="container pt-3 pb-3 border-bottom">
-            <h2>General Server Rules</h2>
+            <h2>🛈 Basic Keybinds to play the game</h2>
+            <ul>
+                <li>F3 - Unlock Mouse (For voting)</li>
+                <li>F4 - Job & Entities Menu</li>
+            </ul>
+        </div>
+        <div class="container pt-3 pb-3 border-bottom">
+            
+            <h2>🗎 General Server Rules</h2>
             <ol>
                 <li>Please do not random kill.</li>
                 <li>Do not block doors or entrances with props.</li>
                 <li>Do not prop kill.</li>
             </ol>
-            <h2>Army, WSF and Police Rules</h2>
+            <h2>🗎 Army, WSF and Police Rules</h2>
             <ol>
                 <li>Please do not random kill.</li>
                 <li>Please do not arrest people for no reason.</li>
             </ol>
-            <h2>The President</h2>
+            <h2>🗎 The President</h2>
             <ol>
                 <li>Is allowed to use military and police forces to "collect taxes" (maximum 250).</li>
                 <li>Can be removed using the /demote command</li>
