--- a/gmod/darkrp.html
+++ b/gmod/darkrp.html
@@ -8,7 +8,7 @@
     <script src="../js/randomname.js"></script>
 </head>
 <body>
-    <header class="container-fluid text-center border-bottom bg-dark text-light pb-5 pt-5">
+    <header class="container-fluid text-center border-bottom bg-dark text-light pb-4 pt-4">
         <h1>WASLAND DARKRP SERVER</h1>
     </header>
     <div class="container-fluid">
@@ -20,19 +20,19 @@
             </ul>
         </div>
         <div class="container pt-3 pb-3 border-bottom">
-            
-            <h2>🗎 General Server Rules</h2>
+            <h2>🗎 Server Rules</h2>
+            <h4>🖺 General Rules</h4>
             <ol>
                 <li>Please do not random kill.</li>
                 <li>Do not block doors or entrances with props.</li>
                 <li>Do not prop kill.</li>
             </ol>
-            <h2>🗎 Army, WSF and Police Rules</h2>
+            <h4>⛨ Army, WSF and Police Rules</h4>
             <ol>
                 <li>Please do not random kill.</li>
                 <li>Please do not arrest people for no reason.</li>
             </ol>
-            <h2>🗎 The President</h2>
+            <h4>⚐ The President</h4>
             <ol>
                 <li>Is allowed to use military and police forces to "collect taxes" (maximum 250).</li>
                 <li>Can be removed using the /demote command</li>
