--- a/gmod/darkrp.html
+++ b/gmod/darkrp.html
@@ -6,6 +6,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="../js/randomname.js"></script>
+    <style>
+        .flag {
+            width: 100%;
+            height: 25em;
+        }
+
+        .flag img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            margin-bottom: 200px;
+        }
+    </style>
 </head>
 <body>
     <header class="container-fluid text-center border-bottom bg-dark text-light pb-4 pt-4">
@@ -53,7 +66,16 @@
         </div>
         <div class="container pt-3 pb-3 border-bottom">
             <button class="btn">
-                <img src="../waslandflag2.png" class="rounded shadow" style="height: 50px;" onclick="alert('wasland')">
+                <img src="../flaginsig.png" class="" style="height: 50px;" onclick="alert('wasland')">
+            </button>
+            <button class="btn">
+                <img src="../policija.png" class="" style="height: 50px;" onclick="alert('policija')">
+            </button>
+            <button class="btn">
+                <img src="../berethat.png" class="" style="height: 50px;" onclick="alert('vojska')">
+            </button>
+            <button class="btn">
+                <img src="../NATOFOR 2.png" class="" style="height: 50px;" onclick="alert('NATO')">
             </button>
         </div>
     </div>
