--- a/gmod/darkrp.html
+++ b/gmod/darkrp.html
@@ -64,6 +64,10 @@
                 <button class="btn btn-secondary" onclick="randomFealeName()">Give me a random female name</button>
             </div>
         </div>
+		<div class="container pt-3 pb-3 border-bottom">
+            <h2>Discord</h2>
+            <a href="https://discord.com/invite/JjpnpQ7uHm">https://discord.com/invite/JjpnpQ7uHm</a>
+        </div>
         <div class="container pt-3 pb-3 border-bottom">
             <button class="btn">
                 <img src="../flaginsig.png" class="" style="height: 50px;" onclick="alert('wasland')">
