--- a/gmod/darkrp.html
+++ b/gmod/darkrp.html
@@ -26,10 +26,12 @@
     </header>
     <div class="container-fluid">
         <div class="container pt-3 pb-3 border-bottom">
-            <h2>🛈 Basic Keybinds to play the game</h2>
+            <h2>🛈 Basic Keybinds & Commands to play the game</h2>
             <ul>
                 <li>F3 - Unlock Mouse (For voting)</li>
-                <li>F4 - Job & Entities Menu</li>
+				<li>// or /ooc to type globally</li>
+				<li>/name or /nick to change your name</li>
+				<li>/job to change your job title</li>
             </ul>
         </div>
         <div class="container pt-3 pb-3 border-bottom">
