--- a/gmod/darkrp.html
+++ b/gmod/darkrp.html
@@ -29,6 +29,7 @@
             <h2>🛈 Basic Keybinds & Commands to play the game</h2>
             <ul>
                 <li>F3 - Unlock Mouse (For voting)</li>
+                <li>F4 - Job Selection & Entities Menu</li>
 				<li>// or /ooc to type globally</li>
 				<li>/name or /nick to change your name</li>
 				<li>/job to change your job title</li>
