--- a/gmod/darkrp.html
+++ b/gmod/darkrp.html
@@ -30,7 +30,8 @@
             <ul>
                 <li>F3 - Unlock Mouse (For voting)</li>
                 <li>F4 - Job Selection & Entities Menu</li>
-				<li>// or /ooc to type globally</li>
+				<li>// or /ooc to type globally (considered out of RP)</li>
+				<li>/advert to type globally (considered in RP)</li>
 				<li>/name or /nick to change your name</li>
 				<li>/job to change your job title</li>
             </ul>
